# earthengine-catalog

./: BUILD  CONTRIBUTING.md  MODULE.bazel  OWNERS_METADATA  README.md  WORKSPACE  bazel-bin  bazel-earthengine-catalog  bazel-out  bazel-testlogs  common_shared_3p_blueprint_information.ncl  gfs  non_commercial_datasets.jsonnet  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  codespell.yml
catalog/: BUILD  ORNL  catalog.jsonnet  description.md  earthengine.libsonnet  earthengine_const.libsonnet  spdx.libsonnet  units.libsonnet  versions.libsonnet
catalog/AAFC/: AAFC_ACI.jsonnet  AAFC_ACI3.jsonnet  ACI2  catalog.jsonnet  description.md
catalog/ACA/: ACA_reef_habitat_v1_0.jsonnet  ACA_reef_habitat_v2_0.jsonnet  ACA_reef_habitat_v5_0.jsonnet  ACA_versions.libsonnet  catalog.jsonnet
catalog/AHN/: AHN_AHN2_05M_INT.jsonnet  AHN_AHN2_05M_NON.jsonnet  AHN_AHN2_05M_RUW.jsonnet  AHN_AHN3.jsonnet  AHN_AHN4.jsonnet  ahn.libsonnet  ahn_new.libsonnet  catalog.jsonnet  description.md
catalog/AIRBUS/: AIRBUS_SPOT_2_4_5_BRAZIL_2007_2009_MS_NC_V1.jsonnet  airbus.libsonnet  (+10 more)
checker/: BUILD  README.md  ee_stac_check.py  ee_stac_check_test.py  stac.py  stac_test.py  test_utils.py  test_utils_test.py  units.py
dev/: BUILD  jsonnets_to_json.bzl
docs/: adding_catalogs.md  adding_datasets.md  guide_to_ingest_geospatial_data_into_bigquery.md  install.md  simple_edits.md  spaces.md  wdpa_bigquery_converter.py
examples/: ACA_reef_habitat_v1_0.js  ACA_reef_habitat_v2_0.js  AHN_AHN2_05M_INT.js  AHN_AHN2_05M_RUW.js  ASTER_AST_L1T_003.js  AU_GA_AUSTRALIA_5M_DEM.js  AU_GA_DEM_1SEC_v10_DEM-H.js  AU_GA_DEM_1SEC_v10_DEM-S.js  BIOPAMA_GlobalOilPalm_v1.js  BLM_AIM_v1_TerrADat_TerrestrialAIM.js  BNU_FGS_CCNL_v1.js  CAS_IGSNRR_PML_V2.js  CAS_IGSNRR_PML_V2_v017.js  CGIAR_SRTM90_V4.js  CIESIN_GPWv411_GPW_Data_Context.js  CIESIN_GPWv411_GPW_Land_Area.js  CIESIN_GPWv411_GPW_Mean_Administrative_Unit_Area.js  CIESIN_GPWv411_GPW_Population_Density.js  CIESIN_GPWv411_GPW_UNWPP-Adjusted_Population_Count.js  CIESIN_GPWv411_GPW_Water_Area.js  CIESIN_GPWv4_ancillary-data-grids.js  CIESIN_GPWv4_population-count.js  CIESIN_GPWv4_unwpp-adjusted-population-count.js  CIESIN_GPWv4_unwpp-adjusted-population-density.js  COPERNICUS_DEM_GLO30.js  COPERNICUS_Landcover_100m_Proba-V-C3_Global.js  COPERNICUS_Landcover_100m_Proba-V_Global.js  COPERNICUS_S1_GRD.js  COPERNICUS_S2.js  COPERNICUS_S2_SR_HARMONIZED.js  COPERNICUS_S3_OLCI.js  COPERNICUS_S5P_NRTI_L3_AER_AI.js  COPERNICUS_S5P_NRTI_L3_AER_LH.js  COPERNICUS_S5P_NRTI_L3_CO.js  COPERNICUS_S5P_NRTI_L3_NO2.js  COPERNICUS_S5P_NRTI_L3_O3.js  COPERNICUS_S5P_NRTI_L3_SO2.js  COPERNICUS_S5P_OFFL_L3_CH4.js  COPERNICUS_S5P_OFFL_L3_CLOUD.js  COPERNICUS_S5P_OFFL_L3_CO.js  (+603 more)
owners/: MalariaAtlasProject.jsonnet  edf-methanesat-ee.jsonnet  edf-methanesat.jsonnet  ee-kbas-in-gee.jsonnet  ee-pkurelab.jsonnet  forestdatapartnership.jsonnet  gcp-public-data-weathernext.jsonnet  gcpm041u-lemur.jsonnet  geoscience-aus-cat.jsonnet  global-pasture-watch.jsonnet  global-precipitation-nowcast.jsonnet  gtac-data-publish.jsonnet  landandcarbon.jsonnet  large-scale-hydrology-lab.jsonnet  malariaatlasproject.jsonnet  mapbiomas-public.jsonnet  nature-trace.jsonnet  neon-aop.jsonnet  neon-prod-earthengine.jsonnet  openet.jsonnet  ornl-mapspace.jsonnet  overture-maps.jsonnet  planet-nicfi.jsonnet  pml_evapotranspiration.jsonnet  sat-io.jsonnet
pipelines/: gedi_extract_l2a.py  gedi_extract_l2b.py  gedi_extract_l4a.py  gedi_lib.py  gedi_rasterize_l2a.py  gedi_rasterize_l2b.py  gedi_rasterize_l4a.py  geocorrect.py  geocorrect_eval.py  geocorrect_test.py  landsat.py  polygon_utils.py  polygon_utils_test.py  smap_anomaly_l4.py  smap_convert_l3.py  smap_convert_l4.py  viirs_aod.py
replicas/: compare_gpm_half_hourly.py  compare_nasa_ee.py
stac/: README.md  bboxes.py  bboxes_test.py  constants.py  errors.py  stac_gcs_loader.py  stac_gcs_loader_test.py  stac_lib.py  stac_lib_test.py
(+4218 files in other folders)
