[tool.poetry]
name = "earthengine-catalog"  
version = "0.1.0"
description = "A library for accessing Earth Engine catalog data."
authors = ["Google Earth Engine Team <earthengine@google.com>"]
python-version = "3.10"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-aiplatform = "^1.18.0"
iso8601 = "^1.0.2"
typing-extensions = "^4.3.0"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"